<resources>
    <string name="app_name">NEQ</string>
    <string name="action_settings">Settings</string>

    <string name="gyroscope">Gyroscope</string>
    <string name="alpha">Alpha:</string>
    <string name="beta">Beta:</string>
    <string name="gamma">Gamma:</string>

    <string name="accelerometer">Accelerometer</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>

    <string name="NotificationTitle">Change posture!</string>
    <string name="NotificationSubtitle">You have maintained one posture for 30 minutes.</string>
    <string name="BadPostureTicker">Change posture!</string>

</resources>
